Cli & protocol adjustments (#75)
* Fix coodinates printing

* Remove Rmi disconnection error printing

* Fix commands strings

* Add playerOnDuty information to view

* Fix NewtonCommandMessage

* Add switch-case in Cli

* Merge Welcome and Login-first messages

* Change 'Conferma' to 'Avanti' and 'Annulla' to 'Indietro'

* Set window's title during match

* Remove last message saving & minor fix

* Update README

* Update readme